--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -81,6 +81,7 @@ a {
   }
 }
 
+
 .logo {
   display: block;
   max-width: 194px;
@@ -114,6 +115,7 @@ a {
 }
 
 ._main-btn {
+  text-transform: uppercase;
   display: flex;
   justify-content: center;
   align-items: center;
