--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -26,6 +26,8 @@
 @import 'blocks/section-8';
 @import 'blocks/section-9';
 @import 'blocks/section-10';
+@import 'blocks/section-11';
+@import 'blocks/section-12';
 
 
 @import 'blocks/section-13';
