--- a/app/scss/blocks/_section-11.scss
+++ b/app/scss/blocks/_section-11.scss
@@ -1,196 +1,294 @@
 .section-11 {
+  max-width: 1400px;
+  margin: var(--indent) auto 0;
+  padding: var(--indent) 0;
+  background-image: url('../images/section-11-bg.webp');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 60px;
+  overflow: hidden;
 
-    max-width: 1400px;
-    margin: 0 auto;
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
+  @include md {
+    border-radius: 30px;
+  }
+
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+
+    @include lg {
+      flex-wrap: wrap;
+    }
+  }
+
+  &__title {
+    margin-bottom: 20px;
+
+    @include xl {
+      margin-bottom: 15px;
+    }
+
+    @include lg {
+      br {
+        display: block;
+      }
+    }
+  }
+
+  &__subtitle {
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 1.2;
+    color: var(--light-color);
+    margin-bottom: 20px;
+
+    @include xl {
+      font-size: 24px;
+    }
+
+    @include lg {
+      font-size: 22px;
+      margin-bottom: 15px;
+    }
+
+
+  }
+
+  &__items {
+    display: grid;
+    gap: 15px;
+    margin-bottom: 40px;
+
+    @include xl {
+      margin-bottom: 30px;
+    }
+
+    @include lg {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__item {
+    display: flex;
+    gap: 10px;
+
+    @include lg {
+      gap: 5px;
+    }
+  }
+
+  &__item-point {
+    background-color: var(--primary);
+    border-radius: 50%;
+    min-width: 30px;
+    height: 30px;
+    color: var(--light-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+  }
+
+  &__item-text {
+    max-width: 430px;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 133%;
+    color: var(--light-color);
+
+    @include lg {
+      max-width: none;
+    }
+
+    @include xs {
+      font-size: 16px;
+    }
+  }
+
+  &__info {
+    max-width: 540px;
+    background-color: #5A5A5A;
     border-radius: 20px;
-    overflow: hidden;
+    padding: 40px;
+    display: grid;
+    gap: 30px;
 
-
-    &__inner {
-        display: flex;
-        gap: 160px;
-        padding-top: 60px;
-        padding-bottom: 120px;
+    @include xl {
+      gap: 20px;
+      padding: 30px;
     }
 
-    &__title {
-        color: var(--light-color);
-        text-align: start;
-        margin-bottom: 20px;
-        font-size: 64px;
-        font-family: var(--font-accent);
-        line-height: 110%;
+    @include lg {
+      gap: 15px;
+      padding: 20px;
+    }
+  }
+
+  &__descr {
+    display: flex;
+    gap: 20px;
+
+    @include lg {
+      gap: 15px;
+    }
+  }
+
+  &__descr-left {
+    background-color: var(--primary);
+    min-width: 44px;
+    height: 44px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__descr-text {
+    font-size: 20px;
+    line-height: 140%;
+    color: var(--light-color);
+    font-weight: 400;
+
+    span {
+      font-weight: 500;
     }
 
-    &__subtitle {
-        font-weight: 400;
-        font-size: 32px;
-        line-height: 120%;
-        color: var(--light-color);
-        margin-bottom: 20px;
+    @include md {
+      font-size: 18px;
     }
 
-    &__items {
-        gap: 15px;
-        display: flex;
-        margin-bottom: 40px;
-        flex-direction: column;
+    @include xs {
+      font-size: 16px;
+    }
+  }
+
+  &__form {
+    background-color: var(--light-color);
+    border-radius: 15px;
+    padding: 50px 50px 40px;
+    max-width: 460px;
+    width: 100%;
+    height: fit-content;
+
+    @include xl {
+      padding: 40px;
     }
 
-    &__item {
-        display: flex;
-        gap: 10px;
+    @include lg {
+      margin: 0 auto;
     }
 
-    &__item-point {
-        background-color: var(--primary);
-        border-radius: 100%;
-        width: 30px;
-        height: 30px;
-        color: var(--light-color);
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    @include md {
+      padding: 30px;
+    }
+  }
+
+  &__form-title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 120%;
+    margin-bottom: 30px;
+
+    @include xl {
+      font-size: 28px;
+      margin-bottom: 20px;
     }
 
-    &__item-text {
-        width: 430px;
-        font-weight: 300;
-        font-size: 18px;
-        line-height: 133%;
-        color: var(--light-color);
+    @include md {
+      font-size: 26px;
+      margin-bottom: 15px;
+    }
+  }
+
+  &__form-subtitle {
+    font-size: 20px;
+    line-height: 150%;
+    color: var(--primary);
+    margin-bottom: 20px;
+
+    @include xl {
+      margin-bottom: 15px;
     }
 
-    &__info {
-        background-color: #5A5A5A;
-        // #5A5A5A
-        border-radius: 20px;
-        padding: 40px;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        width: 540px;
+    @include md {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+  }
 
+  &__form-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 70px;
 
+    @include xl {
+      margin-bottom: 50px;
     }
 
-    &__cont {
-        display: flex;
-        gap: 20px;
+    @include lg {
+      margin-bottom: 30px;
     }
 
-    &__cont-svg {
-        background-color: var(--primary);
-        width: 44px;
-        height: 44px;
-        border-radius: 8px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    @include md {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__form-text {
+    font-size: 18px;
+    line-height: 166%;
+
+    span {
+      color: var(--primary);
     }
 
-    &__cont-text {
-        width: 400px;
-        font-size: 20px;
-        line-height: 140%;
-        color: var(--light-color);
+    @include xs {
+      font-size: 15px;
+    }
+  }
 
-        span {
-            font-weight: 600;
-        }
+  &__form-inner {
+    display: grid;
+    gap: 10px;
+  }
+
+  hr {
+    margin: 25px auto 30px;
+    max-width: 335px;
+    width: 100%;
+    color: var(--border);
+    opacity: 0.5;
+
+    @include xl {
+      margin: 20px auto;
     }
 
-    &__left {
-        background-color: var(--light-color);
-        border-radius: 15px;
-        padding: 50px;
-        max-width: 460px;
-        width: 100%;
+    @include lg {
+      margin: 15px auto;
     }
 
-    &__left-title {
-        font-weight: 600;
-        font-size: 31.125px;
-        line-height: 120%;
-        align-items: center;
-        color: #343434;
-        margin-bottom: 30px;
+    @include xs {
+      display: none;
     }
+  }
 
-    &__left-subtitle {
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 150%;
-        color: var(--primary);
-        margin-bottom: 20px;
+  &__form-phone {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  &__form-link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 136%;
+
+    @include xs {
+      font-size: 16px;
     }
-
-    &__left-text {
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 166%;
-        color: #343434;
-        margin-bottom: 70px;
-
-        span {
-            color: var(--primary);
-        }
-    }
-
-    &__form {
-
-        display: flex;
-        flex-direction: column;
-        gap: 7px;
-    }
-
-    &__form-input {
-        max-width: 370px;
-    }
-
-    &__from-btn {
-        max-width: 370px;
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-
-    hr {
-        max-width: 335px;
-        width: 100%;
-        color: var(--border);
-        opacity: 0.5;
-        margin-top: 35px;
-        margin-bottom: 40px;
-
-
-
-
-
-    }
-
-    &__form-phone {
-
-        display: flex;
-        align-items: center;
-        gap: 5px;
-
-
-    }
-
-    &__form-link {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 136%;
-
-        span {
-            color: #343434;
-        }
-    }
-
-
-
-
+  }
 }
