--- a/app/scss/blocks/_section-12.scss
+++ b/app/scss/blocks/_section-12.scss
@@ -1,110 +1,170 @@
 .section-12 {
+  padding-top: var(--indent);
 
-    &__items {
-        display: flex;
-        flex-direction: column;
-        gap: 60px;
-        margin-bottom: 30px;
+  &__title {
+    margin-bottom: 15px;
+  }
+
+  &__items {
+    display: grid;
+    gap: 30px;
+    margin-bottom: 30px;
+
+    @include lg {
+      gap: 20px;
+      margin-bottom: 20px;
     }
 
-    &__title {
-        margin-bottom: 15px;
+    @include md {
+      gap: 15px;
+      margin-bottom: 15px;
+    }
+  }
+
+  .coursor {
+    @include lg {
+      display: none;
     }
 
-    &__item {
-        height: 560px;
-        overflow: hidden;
-        border-radius: 20px;
-        padding: 40px;
+    @include md {
+      display: flex;
+    }
+  }
+
+  &__item {
+    position: relative;
+    overflow: hidden;
+    border-radius: 30px;
+    padding-bottom: calc(400/1200*100%);
+
+    @include lg {
+      border-radius: 20px;
+      height: 360px;
     }
 
-    &__subtitle {
-        font-weight: 400;
-        font-size: 26px;
-        line-height: 131%;
-        text-align: center;
-        margin-bottom: 50px;
-        color: var(--default-color);
+    @include xs {
+      height: 450px;
     }
 
     .overlay {
-        display: block;
-        background-repeat: no-repeat;
-        background-image:linear-gradient(90deg, #232C35 0%, #232C35 38.22%, rgba(35, 44, 53, 0.62) 65.82%, rgba(35, 44, 53, 0) 96.66%);
-        background-size: cover;
+      display: block;
+      background-repeat: no-repeat;
+      background-image: linear-gradient(90deg, #232C35 0%, #232C35 38.22%, rgba(35, 44, 53, 0.62) 65.82%, rgba(35, 44, 53, 0) 96.66%);
+      background-size: cover;
+    }
+  }
 
+  &__item-inner {
+    position: absolute;
+    padding: 50px 60px;
+    color: var(--light-color);
+
+    @include xl {
+      padding: 40px;
     }
 
-    &__item-title {
-        width: 680px;
-        font-family: var(--font-accent);
-        font-weight: 600;
-        font-size: 32px;
-        line-height: 130%;
-        color: var(--light-color);
-        margin-bottom: 30px;
+    @include sm {
+      padding: 30px 20px;
+    }
+  }
 
-        @include md {
-            width: 400px;
-            font-size: 28px;
-        }
+  &__item-title {
+    max-width: 680px;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 130%;
+    margin-bottom: 30px;
 
-        span {
-            color: var(--primary);
-        }
+    @include xl {
+      font-size: 28px;
+      margin-bottom: 20px;
     }
 
-    &__item-text {
-        width: 410px;
-        font-family: var(--font-accent);
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 160%;
-        color: var(--light-color);
-
-        @include md {
-            width: 400px;
-            font-size: 22px;
-        }
+    @include lg {
+      font-size: 26px;
     }
 
-    &__bottom {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 30px;
-
-        @include lg {
-            grid-template-columns: repeat(1, 1fr);
-        }
+    @include md {
+      font-size: 24px;
+      margin-bottom: 15px;
     }
 
-    &__cart {
-        height: 430px;
-        display: flex;
-        flex-direction: column;
-        justify-content: end;
+    span {
+      color: var(--primary);
+    }
+  }
+
+  &__item-text {
+    max-width: 410px;
+    font-size: 18px;
+    line-height: 160%;
+  }
+
+  &__elems {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+
+    @include xl {
+      gap: 15px;
     }
 
-    &__cart-info {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 120px;
-        border-radius: 20px;
-        background-color: var(--accent);
+    @include md {
+      overflow-x: auto;
+      padding-bottom: 10px;
+      grid-auto-flow: column;
     }
 
-    &__cart-text {
-        width: 461px;
-        font-family:var(--font-accent);
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 160%;
-        text-align: center;
-        color: var(--light-color);
+  }
+
+  &__elem {
+    position: relative;
+    border-radius: 30px;
+    overflow: hidden;
+    padding-bottom: calc(430/585*100%);
+
+    @include lg {
+      border-radius: 20px;
     }
 
- 
+    @include md {
+      width: 300px;
+      padding-bottom: 110%;
+    }
+  }
+
+  &__elem-info {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    min-height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
+    border-radius: 30px;
+    background-color: var(--accent);
+
+    @include md {
+      border-radius: 20px;
+      padding: 10px;
+    }
+  }
+
+  &__elem-text {
+    max-width: 460px;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+    color: var(--light-color);
+    line-height: 160%;
+
+    @include lg {
+      font-size: 16px;
+    }
+  }
+
+
 
 
 }
