--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -28,12 +28,12 @@
 @import 'blocks/section-10';
 @import 'blocks/section-11';
 @import 'blocks/section-12';
-
-
 @import 'blocks/section-13';
 @import 'blocks/section-14';
 @import 'blocks/section-15';
-@import 'blocks/guarantee';
+@import 'blocks/section-16';
+
+
 @import 'blocks/footer';
 
 
