--- a/app/scss/blocks/_section-13.scss
+++ b/app/scss/blocks/_section-13.scss
@@ -4,6 +4,7 @@
   background-position: center;
   background-size: cover;
   padding: var(--indent) 0;
+  margin-top: var(--indent);
 
 
   &__title {
