--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -32,6 +32,7 @@
 @import 'blocks/section-14';
 @import 'blocks/section-15';
 @import 'blocks/section-16';
+@import 'blocks/section-17';
 
 
 @import 'blocks/footer';
