--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,7 +11,6 @@
 @import 'base/titles';
 
 
-@import './components/filters.scss';
 @import './components/accordion.scss';
 
 
@@ -33,6 +32,8 @@
 @import 'blocks/section-15';
 @import 'blocks/section-16';
 @import 'blocks/section-17';
+
+@import 'blocks/section-19';
 
 
 @import 'blocks/footer';
