--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -306,7 +306,7 @@ a {
     width: 64px;
     height: 64px;
     border-radius: 50%;
-    background-color: var(--accent);
+    background-color: var(--primary);
     display: flex;
     justify-content: center;
     align-items: center;
