--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -32,8 +32,10 @@
 @import 'blocks/section-15';
 @import 'blocks/section-16';
 @import 'blocks/section-17';
-
+@import 'blocks/section-18';
 @import 'blocks/section-19';
+@import 'blocks/section-20';
+@import 'blocks/section-21';
 
 
 @import 'blocks/footer';
