--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -36,6 +36,9 @@
 @import 'blocks/section-19';
 @import 'blocks/section-20';
 @import 'blocks/section-21';
+@import 'blocks/section-22';
+@import 'blocks/section-23';
+@import 'blocks/section-24';
 
 
 @import 'blocks/footer';
