--- a/app/scss/blocks/_section-24.scss
+++ b/app/scss/blocks/_section-24.scss
@@ -1,14 +1,31 @@
-.section-20 {
-  background-image: url('../../images/section-20-bg.webp');
+.section-24 {
+  background-image: url('../../images/section-24-bg.webp');
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-top: var(--indent);
   padding: var(--indent) 0;
+  margin-top: var(--indent);
+
+  &__title {
+    text-align: center;
+  }
+
+  &__form-img {
+    position: absolute;
+    right: 0;
+    bottom: calc(-1* var(--indent));
+
+    @include xl {
+      width: 75%;
+    }
+
+    @include lg {
+      display: none;
+    }
+  }
 
   &__form {
-    max-width: 480px;
-    margin-left: auto;
+    position: relative;
   }
 
   &__form-title {
@@ -19,10 +36,10 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 1.2;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 
     @include xl {
-      margin-bottom: 30px;
+      margin-bottom: 25px;
     }
 
     @include lg {
@@ -33,4 +50,5 @@
       margin-bottom: 15px;
     }
   }
+
 }
