added sections 25/26, footer. Added map script

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -39,6 +39,8 @@
 @import 'blocks/section-22';
 @import 'blocks/section-23';
 @import 'blocks/section-24';
+@import 'blocks/section-25';
+@import 'blocks/section-26';
 
 
 @import 'blocks/footer';
