--- a/app/scss/blocks/_footer.scss
+++ b/app/scss/blocks/_footer.scss
@@ -1,474 +1,100 @@
 .footer {
-    background-color: var(--accent);
-    padding: 50px 0 28px;
+  padding: 25px 0;
 
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
 
-    &__top {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 28px;
-
-        @include xl {
-            flex-direction: column;
-            gap: 5px;
-        }
-
-        @include md{
-            gap: 20px;
-        }
-
-        @include sm{
-            flex-direction: column;
-            gap: 5px;
-        }
+    @include lg {
+      flex-wrap: wrap;
+      justify-content: center;
     }
 
-    &__item {
-        &:first-child {
-            max-width: 268px;
-            width: 100%;
-        }
+    @include md {
+      justify-content: start;
+      align-items: start;
+      flex-direction: column;
+    }
+  }
 
-        @include xl {
-            &:first-child {
-                max-width: 100%;
-                display: flex;
-                justify-content: space-between;
-                margin-bottom: 20px;
-            }
-        }
+  &__logo {
+    display: flex;
+    align-items: center;
+    max-width: 295px;
+    gap: 20px;
 
-        @include md{
-            &:first-child {
-                flex-wrap: wrap;
-                gap: 15px;
-                margin-bottom: 0;
-            }
+    @include xl {
+      gap: 15px;
+      max-width: 250px;
+    }
+  }
 
-            &:last-child {
-                width: 100%;
-            }
-        }
+  &__logo-img {
+    @include xl {
+      max-width: 160px;
+    }
+  }
 
-        @include sm{
-            position: relative;
+  &__policy {
+    text-decoration: underline;
+    text-underline-offset: 2px;
+    transition: all .3s;
 
-            &:first-child {
-                flex-direction: column;
-                gap: 15px;
-            }
-
-            .accordion-header {
-                cursor: pointer;
-                position: relative;
-                width: fit-content;
-
-                &:hover {
-                    color: var(--primary);
-                }
-
-                &::before {
-                    position: absolute;
-                    right: -16px;
-                    content: '';
-                    width: 10px;
-                    height: 10px;
-                    background-image: url('../images/icons/arrow.svg');
-                    background-repeat: no-repeat;
-                    background-size: contain;
-                    background-position: center;
-                    rotate: 90deg;
-                    top: 5px;
-                    transition: all .3s;
-                }
-            }
-
-            &.active .accordion-header::before {
-                rotate: 0deg;
-            }
-
-            .accordion-body {
-                z-index: -5;
-                top: -100%;
-            }
-
-            &.active .accordion-body {
-                transform: rotateX(0deg);
-                top: 25px;
-                background-color:var(--accent);
-                height: auto;
-                padding: 0 10px 10px 0;
-            }
-        }
+    @include lg {
+      order: 1;
     }
 
-    &__item-logo {
-        color: var(--def-text);
-        max-width: 205px;
-        margin-bottom: 72px;
 
-        .logo {
-            margin-bottom: 10px;
-        }
+    &:hover {
+      color: var(--primary);
+    }
+  }
 
-        @include xl {
-            margin-bottom: 0;
-        }
+  &__mail {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.2;
+    transition: all .3s;
+
+    &:hover {
+      color: var(--primary);
+    }
+  }
+
+  &__phone-top {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    margin-bottom: 5px;
+  }
+
+  &__phone-number {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    transition: all .3s;
+
+    @include xl {
+      font-size: 20px;
     }
 
-    &__item-menu {
-        margin-bottom: 36px;
-
-        @include lg{
-            margin-bottom: 10px;
-        }
-
-        @include md{
-            width: 100%;
-            order: 1;
-        }
+    &:hover {
+      color: var(--primary);
     }
+  }
 
-    &__yandex {
-        color: white;
-    }
-
-    &__item-title {
-        font-weight: 600;
-        font-size: 15px;
-        line-height: calc(18/15*100%);
-        color: white;
-        margin-bottom: 10px;
-
-        &.accordion-header {
-            padding: 0;
-            border: none;
-            cursor: initial;
-            transition: none;
-
-            &:hover {
-                background-color: transparent;
-            }
-        }
-    }
-
-    &__item-list {
-        display: grid;
-        gap: 7px;
-    }
-
-    &__item-list {
-        font-weight: 300;
-        font-size: 12px;
-        line-height: calc(15/12*100%);
-        color: var(--def-text);
-    }
-
-    &__item-phone {
-        align-items: center;
-        gap: 10px;
-        margin-bottom: 15px;
-
-        span {
-            // @extend %nunito;
-            font-weight: 600;
-            font-size: 20px;
-            line-height: 135.7%;
-        }
-    }
-
-    &__item-btn {
-        max-width: 200px;
-        height: 46px;
-        font-weight: 400;
-        font-size: 15px;
-        line-height: calc(18/15*100%);
-        margin-bottom: 15px;
-    }
-
-    .email {
-        margin-bottom: 15px;
-        display: block;
-
-        &__top {
-            margin-bottom: 5px;
-
-            span {
-                font-weight: 700;
-                font-size: 20px;
-                line-height: calc(24/20*100%);
-            }
-        }
-    }
-
-    &__item-bottom {
-        display: flex;
-        color: var(--def-text);
-        gap: 28px;
-    }
-
-    &__bottom {
-        display: flex;
-        justify-content: space-between;
-
-        @include md{
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-    }
-
-    &__bottom-text {
-        font-weight: 300;
-        font-size: 12px;
-        line-height: calc(15/12*100%);
-        color: white;
-
-        &:first-child {
-            margin-bottom: 10px;
-        }
-    }
-
-    &__bottom-link {
-        font-weight: 500;
-        text-decoration: underline;
-        color: white;
-    }
-
-    &__bottom-right {
-        max-width: 350px;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    &__bottom-item {
-        font-weight: 300;
-        font-size: 12px;
-        line-height: calc(15/12*100%);
-        color: white;
-
-        &:first-child {
-            font-weight: 600;
-            font-size: 15px;
-            line-height: calc(18/15*100%);
-        }
-    }
-
-    a:hover {
-        color: var(--primary);
-        transition: all .3s;
-    }
-}
-
-.footer-menu {
-
-    @include sm{
-        flex-direction: column;
-    }
-
-    &__list {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px 25px;
-        justify-content: space-between;
-
-        @include xl {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-        }
-
-        @include lg{
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
-        }
-
-        @include md{
-            grid-template-columns: repeat(2, 1fr);
-            gap: 5px 150px;
-        }
-
-        @include sm{
-            grid-template-columns: repeat(1, 1fr);
-            gap: 5px;
-        }
-    }
-
-    &__item {
-        &:nth-child(even) {
-            max-width: 152px;
-            width: 100%;
-        }
-    }
-
-    &__link {
-        font-weight: 600;
-        font-size: 15px;
-        line-height: calc(18/15*100%);
-        color: white;
-        display: block;
-        width: 100%;
-
-        @include md{
-            font-size: 13px;
-        }
-
-    }
-
-}
-
-@media (max-width: 1230px) {
-    .footer {
-        &__top {
-            flex-wrap: wrap;
-        }
-
-        &__item {
-            &:first-child {
-                max-width: 100%;
-                display: flex;
-                justify-content: space-between;
-                margin-bottom: 20px;
-            }
-        }
-
-        &__item-logo {
-
-            margin-bottom: 0;
-        }
-    }
-
-    .footer-menu {
-        &__list {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-        }
-    }
-}
-
-@media (max-width: 991.8px) {
-    .footer {
-        &__item-menu {
-            margin-bottom: 10px;
-        }
-    }
-
-    .footer-menu {
-        &__list {
-            grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
-        }
-    }
-}
-
-@media (max-width: 767.98px) {
-    .footer-menu {
-        &__list {
-            grid-template-columns: repeat(2, 1fr);
-            gap: 5px 150px;
-        }
-
-        &__link {
-            font-size: 13px;
-        }
-    }
-
-    .footer {
-
-        &__item {
-            &:first-child {
-                flex-wrap: wrap;
-                gap: 15px;
-                margin-bottom: 0;
-            }
-
-            &:last-child {
-                width: 100%;
-            }
-        }
-
-        &__item-menu {
-            width: 100%;
-            order: 1;
-        }
-
-        &__top {
-            gap: 20px;
-        }
-
-        &__bottom {
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-    }
-}
-
-
-@media (max-width: 575.98px) {
-    .footer {
-        &__top {
-            flex-direction: column;
-            gap: 5px;
-        }
-
-        &__item {
-            position: relative;
-
-            &:first-child {
-                flex-direction: column;
-                gap: 15px;
-            }
-
-            .accordion-header {
-                cursor: pointer;
-                position: relative;
-                width: fit-content;
-
-                &:hover {
-                    color:var(--primary);
-                }
-
-                &::before {
-                    position: absolute;
-                    right: -16px;
-                    content: '';
-                    width: 10px;
-                    height: 10px;
-                    background-image: url('../images/icons/arrow.svg');
-                    background-repeat: no-repeat;
-                    background-size: contain;
-                    background-position: center;
-                    rotate: 90deg;
-                    top: 5px;
-                    transition: all .3s;
-                }
-            }
-
-            &.active .accordion-header::before {
-                rotate: 0deg;
-            }
-
-            .accordion-body {
-                z-index: -5;
-                top: -100%;
-            }
-
-            &.active .accordion-body {
-                transform: rotateX(0deg);
-                top: 25px;
-                background-color:var(--accent);
-                height: auto;
-                padding: 0 10px 10px 0;
-            }
-        }
-    }
-
-    .footer-menu {
-        flex-direction: column;
-
-        &__list {
-            grid-template-columns: repeat(1, 1fr);
-            gap: 5px;
-        }
-    }
+  &__phone-link {
+    margin-left: 25px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    text-underline-offset: 5px;
+  }
 }
