--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,6 +22,7 @@
 @import 'blocks/section-5';
 @import 'blocks/section-6';
 @import 'blocks/section-7';
+@import 'blocks/quiz';
 @import 'blocks/section-8';
 @import 'blocks/section-9';
 @import 'blocks/section-10';
