--- a/app/scss/blocks/_quiz.scss
+++ b/app/scss/blocks/_quiz.scss
@@ -407,6 +407,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: var(--light-color);
+
+  input {
+    color: var(--default-color);
+  }
 }
 
 .quiz-block__inner.active {
