--- a/app/scss/blocks/_section-10.scss
+++ b/app/scss/blocks/_section-10.scss
@@ -1,6 +1,6 @@
 .section-10 {
   padding: var(--indent) 0;
-  background-image: url(../../images/section-10-bg.webp);
+  background-image: url("../images/section-10-bg.webp");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
