--- a/app/scss/blocks/_section-15.scss
+++ b/app/scss/blocks/_section-15.scss
@@ -131,7 +131,7 @@
       content: '';
       width: 32px;
       height: 32px;
-      background-image: url('../../images/icons/phone-inp.svg');
+      background-image: url('../images/icons/phone-inp.svg');
       left: 20px;
       background-size: contain;
       background-repeat: no-repeat;
