--- a/app/scss/blocks/_section-24.scss
+++ b/app/scss/blocks/_section-24.scss
@@ -1,5 +1,5 @@
 .section-24 {
-  background-image: url('../../images/section-24-bg.webp');
+  background-image: url('../images/section-24-bg.webp');
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
