--- a/app/scss/blocks/_section-20.scss
+++ b/app/scss/blocks/_section-20.scss
@@ -1,5 +1,5 @@
 .section-20 {
-  background-image: url('../../images/section-20-bg.webp');
+  background-image: url('../images/section-20-bg.webp');
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
